<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appName">FORGOR</string>

    <string name="shortcut_label_save_image">Save to FORGOR</string>

    <string name="signUp">SIGN UP</string>
    <string name="logIn">LOG IN</string>
    <string name="loginSuccess">LOGGED IN!</string>
    <string name="signIn">SIGN IN</string>
    <string name="otherSignIn">OTHER SIGN IN</string>
    <string name="googleSignIn">GOOGLE SIGN IN</string>
    <string name="user">USER</string>
    <string name="username">USERNAME</string>
    <string name="usernameHint">PICK A USERNAME</string>
    <string name="editUsername">EDIT USERNAME</string>
    <string name="account">ACCOUNT</string>
    <string name="email">EMAIL</string>
    <string name="emailHint">USE AN EMAIL</string>
    <string name="editEmail">EDIT EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="passwordHint">PICK A PASSWORD</string>
    <string name="signupSuccess">SIGNED UP!</string>

    <string name="featuresText">FEATURES</string>
    <string name="monitoringText">AUTO ADD SCREENSHOTS</string>
    <string name="toggleOnText">ON</string>
    <string name="toggleOffText">OFF</string>
    <string name="summaryFrequencyText">EMAIL SUMMARY FREQUENCY</string>
    <string name="summaryNoneText">NONE</string>
    <string name="summaryDailyText">DAILY</string>
    <string name="summaryWeeklyText">WEEKLY</string>
    <string name="summaryMonthlyText">MONTHLY</string>
    <string name="digestFrequencyText">EMAIL DIGEST FREQUENCY</string>
    <string name="stopForgoringText">STOP FORGORING</string>

    <string name="searchImagesDescription">SEARCH IMAGES</string>
    <string name="searchHint">WHAT ARE YOU FORGORING?</string>
    <string name="imageDescription">SEARCH IMAGE RESULT</string>
    <string name="networkSlow">NETWORK IS SLOW</string>
    <string name="loadingContent">LOADING…</string>
    <string name="failedLoadingContent">FAILED TO LOAD</string>
    <string name="noResultsFound">NO RESULTS FOUND</string>

    <!--    CONTENT DESCRIPTIONS    -->
    <string name="filterPostsButtonDescription">FILTER POSTS</string>
    <string name="fileUploadButtonDescription">UPLOAD FILES</string>
    <string name="sizeToggleButtonDescription">CHANGE IMAGE SIZE</string>
    <string name="settingsButtonDescription">OPEN SETTINGS</string>

    <string name="openPost">OPEN POST</string>
    <string name="sharePost">SHARE POST</string>
    <string name="deletePost">DELETE POST</string>
    <string name="findSimilarPost">FIND SIMILAR POST</string>

    <string name="settingsText">SETTINGS</string>
    <string name="download">REQUEST DATA EXPORT</string>
    <string name="settingsUserLogout">LOGOUT</string>
    <string name="settingsUserDelete">DELETE ACCOUNT</string>

    <string name="tiers">TIER</string>
    <string name="currentTier">%1$s</string>
    <string name="savesLeft">SAVES</string>
    <string name="savesLeftAmount">%1$d OF %2$d SAVES LEFT</string>

    <string name="savingText">SAVING</string>
    <string name="noResultsIcon">NO RESULTS</string>

</resources>