<!-- activity_second.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/base_0"
                    android:contentDescription="@string/settingsText"
                    android:fontFamily="@font/venus_cormier"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingTop="64dp"
                    android:text="@string/featuresText"
                    android:textColor="@color/accent_0"
                    android:textSize="64sp"
                    app:layout_collapseMode="pin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"

        android:background="@drawable/data_background"

        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/listenerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="12dp"

            android:fontFamily="@font/venus_cormier"
            android:gravity="start"
            android:text="@string/monitoringText"
            android:textColor="@color/accent_1"
            android:textSize="14sp" />
        <ToggleButton
            android:id="@+id/screenshotToggleButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"

            android:layout_marginBottom="8dp"

            android:background="@color/base_0"
            android:drawableTint="@color/accent_1"

            android:checked="false"
            android:stateListAnimator="@null"

            android:fontFamily="@font/venus_cormier"
            android:textColor="@color/accent_1"
            android:textOff="@string/toggleOffText"
            android:textOn="@string/toggleOnText"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuresTextView" />

        <TextView
            android:id="@+id/digestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:padding="12dp"

            android:gravity="start"

            android:fontFamily="@font/venus_cormier"
            android:text="@string/summaryFrequencyText"
            android:textColor="@color/accent_1"
            android:textSize="14sp" />
        <Button
            android:id="@+id/summaryFreqToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="24dp"

            android:enabled="true"

            app:cornerRadius="@dimen/softCorners"
            android:backgroundTint="@color/base_0"

            android:textSize="14sp"
            android:text="@string/summaryNoneText"
            android:textColor="@color/accent_1"
            android:fontFamily="@font/venus_cormier"

            android:stateListAnimator="@null"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuresTextView" />

        <TextView
            android:id="@+id/digestEnabledTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:padding="12dp"

            android:gravity="start"

            android:fontFamily="@font/venus_cormier"
            android:text="@string/digestFrequencyText"
            android:textColor="@color/accent_1"
            android:textSize="14sp" />
        <Button
            android:id="@+id/digestEnabledToggleButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"

            app:cornerRadius="@dimen/softCorners"
            android:backgroundTint="@color/base_0"

            android:checked="false"
            android:stateListAnimator="@null"

            android:fontFamily="@font/venus_cormier"
            android:textColor="@color/accent_1"
            android:text="@string/summaryNoneText"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuresTextView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>