<!-- activity_second.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/base_0"
                    android:contentDescription="@string/settingsText"
                    android:fontFamily="@font/venus_cormier"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingTop="64dp"
                    android:text="@string/user"
                    android:textColor="@color/accent_0"
                    android:textSize="64sp"
                    app:layout_collapseMode="pin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/linearLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:padding="16dp"

        android:background="@color/base_1"

        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/venus_cormier"

            android:gravity="start"
            android:padding="12dp"
            android:text="@string/username"
            android:textColor="@color/base_2"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="24dp"

            android:background="@color/base_0"
            android:fontFamily="@font/venus_cormier"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:hint="@string/username"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameTextView" />

        <Button
            android:id="@+id/editUsername"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:padding="24dp"

            android:enabled="false"

            app:cornerRadius="@dimen/softCorners"
            android:backgroundTint="@android:color/darker_gray"

            android:textSize="14sp"
            android:text="@string/editUsername"
            android:textColor="@color/base_0"
            android:fontFamily="@font/venus_cormier"

            android:stateListAnimator="@null"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permissionsTextView" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/venus_cormier"

            android:gravity="start"
            android:padding="12dp"
            android:text="@string/email"
            android:textColor="@color/base_2"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/base_0"

            android:fontFamily="@font/venus_cormier"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:padding="24dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:hint="@string/email"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameTextView" />

        <Button
            android:id="@+id/editEmail"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:padding="24dp"

            android:enabled="false"

            app:cornerRadius="@dimen/softCorners"
            android:backgroundTint="@android:color/darker_gray"

            android:textSize="14sp"
            android:text="@string/editEmail"
            android:textColor="@color/base_0"
            android:fontFamily="@font/venus_cormier"

            android:stateListAnimator="@null"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permissionsTextView" />

        <TextView
            android:id="@+id/accountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/venus_cormier"

            android:gravity="start"
            android:padding="12dp"
            android:text="@string/account"
            android:textColor="@color/base_2"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/userLogoutButton"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:padding="24dp"

            android:enabled="true"

            app:cornerRadius="@dimen/softCorners"
            android:backgroundTint="@color/accent_0"

            android:textSize="14sp"
            android:text="@string/settingsUserLogout"
            android:textColor="@color/accent_1"
            android:fontFamily="@font/venus_cormier"

            android:stateListAnimator="@null"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permissionsTextView" />

        <Button
            android:id="@+id/accountDeleteButton"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:padding="24dp"

            android:enabled="true"

            app:cornerRadius="@dimen/softCorners"
            android:backgroundTint="@android:color/black"

            android:textSize="14sp"
            android:text="@string/settingsUserDelete"
            android:textColor="@color/accent_0"
            android:fontFamily="@font/venus_cormier"

            android:stateListAnimator="@null"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permissionsTextView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>