<!-- activity_second.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="8dp"
        android:fontFamily="@font/venus_cormier"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/featuresText"

        android:textColor="@color/accent_0"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"

        android:background="@drawable/data_background"

        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/buttonToMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/listenerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="12dp"

            android:fontFamily="@font/venus_cormier"
            android:gravity="start"
            android:text="@string/monitoringText"
            android:textColor="@color/accent_1"
            android:textSize="14sp" />

        <ToggleButton
            android:id="@+id/screenshotToggleButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"

            android:layout_marginBottom="8dp"

            android:background="@color/base_0"
            android:drawableTint="@color/accent_1"

            android:checked="false"
            android:stateListAnimator="@null"

            android:fontFamily="@font/venus_cormier"
            android:textColor="@color/accent_1"
            android:textOff="@string/screenshotToggleOffText"
            android:textOn="@string/screenshotToggleOnText"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuresTextView" />

        <TextView
            android:id="@+id/digestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:padding="12dp"

            android:gravity="start"

            android:fontFamily="@font/venus_cormier"
            android:text="@string/summaryFrequencyText"
            android:textColor="@color/accent_1"
            android:textSize="14sp" />

        <Button
            android:id="@+id/summaryFreqToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="24dp"

            android:enabled="true"

            app:cornerRadius="@dimen/softCorners"
            android:backgroundTint="@color/base_0"

            android:textSize="14sp"
            android:text="@string/summaryNoneText"
            android:textColor="@color/accent_1"
            android:fontFamily="@font/venus_cormier"

            android:stateListAnimator="@null"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuresTextView" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonToMain"

        android:layout_width="0dp"
        android:layout_height="64dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"

        android:enabled="true"
        app:cornerRadius="@dimen/softCorners"
        android:stateListAnimator="@null"
        android:contentDescription="@string/stopForgoringText"

        android:background="@color/accent_1"

        android:fontFamily="@font/venus_cormier"
        android:textColor="@color/accent_0"
        android:text="@string/stopForgoringText"
        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>