<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:src="@drawable/baseline_menu_24"
        android:background="@color/base_1"
        app:tint="@color/accent_1"

        android:contentDescription="@string/settingsText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:fontFamily="@font/venus_cormier"

        android:letterSpacing="0"
        android:lineSpacingExtra="0sp"
        android:paddingStart="8dp"
        android:text="@string/appName"

        android:textColor="@color/accent_0"
        android:textSize="96sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/accent_0"
        android:fontFamily="@font/venus_cormier"
        android:gravity="center"

        android:hint="@string/searchHint"
        android:inputType="text"

        android:padding="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"

        android:stateListAnimator="@null"
        android:textColor="@color/accent_1"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="14sp"
        app:elevation="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imageRecyclerView"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:overScrollMode="never"
        android:nestedScrollingEnabled="false"

        android:padding="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>