<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_0"
    android:orientation="vertical">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/fullImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bhuvaneshw.pdf.PdfViewer
        android:id="@+id/pdf_viewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"

        android:visibility="gone"

        app:containerBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/textScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="32dp"

        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/venus_cormier"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/accent_1"
            android:textSize="16sp"

            app:layout_constraintBottom_toTopOf="@+id/fullImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="be considered similar Improve color similarities\nAdd placeholder text when loading info\nCombine query types" />
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/sharePostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"

            android:background="@color/accent_1"
            android:contentDescription="@string/sharePost"
            android:fontFamily="@font/venus_cormier"
            android:gravity="center_horizontal|center_vertical"
            android:src="@android:drawable/ic_menu_share"
            android:stateListAnimator="@null"

            app:layout_constraintBottom_toTopOf="@+id/deletePostButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/deletePostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"

            android:background="@color/accent_1"
            android:contentDescription="@string/deletePost"
            android:fontFamily="@font/venus_cormier"
            android:src="@android:drawable/ic_menu_delete"
            android:stateListAnimator="@null"

            app:layout_constraintBottom_toTopOf="@+id/openPostButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/openPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"

            android:background="@color/accent_1"
            android:contentDescription="@string/openPost"
            android:fontFamily="@font/venus_cormier"
            android:src="@android:drawable/ic_menu_view"
            android:stateListAnimator="@null"

            app:layout_constraintBottom_toTopOf="@+id/similarPostButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/similarPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"

            android:background="@color/accent_1"
            android:contentDescription="@string/findSimilarPost"
            android:fontFamily="@font/venus_cormier"
            android:src="@android:drawable/ic_menu_search"
            android:stateListAnimator="@null"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>